--- a/index.html
+++ b/index.html
@@ -596,10 +596,11 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 					
-							<div style="display: flex; gap: 1%; margin-bottom: 0.5em;">
-							    <img src="images/1000023601.jpg" style="height: min(15em, 40vh); width: auto;">
-							    <img src="images/IMG_20221112_124230.jpg" style="height: min(15em, 40vh); width: auto;">
+							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%; overflow: hidden;">
+							    <img src="images/1000023601.jpg" style="height: auto; max-width: 49%; max-height: 40vh; object-fit: contain;">
+							    <img src="images/IMG_20221112_124230.jpg" style="height: auto; max-width: 49%; max-height: 40vh; object-fit: contain;">
 							</div>
+
 														
 							<p>
 								<!-- <a href="path_to_file" download="proposed_file_name">Download</a> -->
@@ -714,6 +715,7 @@
 
 	</body>
 </html>
+
 
 
 
