--- a/index.html
+++ b/index.html
@@ -616,8 +616,10 @@
 							</p>
 							<p>
 								<b>Centennial of Planetariums</b>
-								<video src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/CEN_Frame_0.mp4" controls style="width: 100%;"></video>
-  			
+								<video controls playsinline preload="metadata" style="width: 100%;">
+								    <source src="https://github.com/sarahparker2296/sarahparker2296.github.io/releases/download/v1.0/CEN_Frame_0.mp4" type="video/mp4">
+								    Your browser does not support the video tag.
+								</video>
 								This visual was created in Digistar 6. It is a compilation of many pictures from planetarium100.org and was made in celebration 
 								of the centennial of planetariums. Each picture is in a row, rotating around the dome in alternating directions. Three different 
 								pictures pop up at the front of the dome separately for better viewing, then return to their place in the rotation. 
@@ -715,6 +717,7 @@
 
 	</body>
 </html>
+
 
 
 
