--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 					
-							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%; overflow: hidden;">
-							    <img src="images/1000023601.jpg" style="height: auto; max-width: 49%; max-height: 40vh; object-fit: contain;">
-							    <img src="images/IMG_20221112_124230.jpg" style="height: auto; max-width: 49%; max-height: 40vh; object-fit: contain;">
+							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%; align-items: flex-start;">
+							    <img src="images/1000023601.jpg" style="flex: 1; height: 15em; max-height: 40vh; object-fit: contain;">
+							    <img src="images/IMG_20221112_124230.jpg" style="flex: 1; height: 15em; max-height: 40vh; object-fit: contain;">
 							</div>
 
 														
@@ -717,6 +717,7 @@
 
 	</body>
 </html>
+
 
 
 
