--- a/index.html
+++ b/index.html
@@ -596,9 +596,13 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 					
-							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%; overflow: hidden;">
-							    <img src="images/1000023601.jpg" style="height: 15em; max-height: 40vh; max-width: 49.5%; object-fit: contain;">
-							    <img src="images/IMG_20221112_124230.jpg" style="height: 15em; max-height: 40vh; max-width: 49.5%; object-fit: contain;">
+							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%; align-items: stretch;">
+							    <div style="flex: 1; height: min(15em, 40vh); display: flex; align-items: center; justify-content: center;">
+							        <img src="images/1000023601.jpg" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+							    </div>
+							    <div style="flex: 1; height: min(15em, 40vh); display: flex; align-items: center; justify-content: center;">
+							        <img src="images/IMG_20221112_124230.jpg" style="max-width: 100%; max-height: 100%; object-fit: contain;">
+							    </div>
 							</div>
 
 														
@@ -729,3 +733,4 @@
 
 	</body>
 </html>
+
