--- a/index.html
+++ b/index.html
@@ -596,14 +596,7 @@
 						<article id="portfolio">
 							<h2 class="major">Planetarian Portfolio</h2>
 					
-							<div style="display: flex; gap: 1%; margin-bottom: 0.5em; width: 100%;">
-							    <div style="flex: 1; position: relative; padding-bottom: 75%; overflow: hidden;">
-							        <img src="images/1000023601.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain;">
-							    </div>
-							    <div style="flex: 1; position: relative; padding-bottom: 75%; overflow: hidden;">
-							        <img src="images/IMG_20221112_124230.jpg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain;">
-							    </div>
-							</div>
+							<img src="images/planetarium.png" style="width: 100%; height: auto; max-width: 100%; display: block;">
 
 														
 							<p>
@@ -733,5 +726,6 @@
 
 	</body>
 </html>
+
 
 
