--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 							</p>
 						</article>
 						<article id="portfolio">
-							<h2 class="major">Planetarian Portfolio</h2>
+							<h2 class="major" style="font-size: clamp(1.5rem, 5vw, 3rem); word-wrap: break-word;">Planetarian Portfolio</h2>
 					
 							<img src="images/planetarium.png" style="width: 100%; height: auto; max-width: 100%; display: block;">
 
@@ -726,6 +726,7 @@
 
 	</body>
 </html>
+
 
 
 
