--- a/index.html
+++ b/index.html
@@ -594,12 +594,24 @@
 							</p>
 						</article>
 						<article id="portfolio">
-							<h2 class="major" style="word-wrap: break-word;">Planetarian Portfolio</h2>
+						<h2 class="major" style="word-wrap: break-word;">Planetarian Portfolio</h2>
 
 							<style>
 							@media (max-width: 600px) {
 							    .major {
 							        font-size: 1.2rem !important;
+							    }
+							}
+							
+							@media (max-width: 400px) {
+							    .major {
+							        font-size: 1rem !important;
+							    }
+							}
+							
+							@media (max-width: 320px) {
+							    .major {
+							        font-size: 0.9rem !important;
 							    }
 							}
 							</style>
@@ -734,6 +746,7 @@
 
 	</body>
 </html>
+
 
 
 
